Styles & anim updates

--- a/index.html
+++ b/index.html
@@ -39,105 +39,107 @@
                     <div class="container">
                         <div class="pricelist">
                             <img class="pricelist__item" src="./img/works/1.png" alt="work1">
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Выезд на замер - <span>Бесплатно</span></h2>
-                                    <p class="text-block__p">Профессиональные замеры – первый шаг к безупречному
-                                        электромонтажу! Наши эксперты предоставляют точные и детальные замеры помещений
-                                        для планирования и осуществления электромонтажных работ. Обеспечьте эффективное
-                                        и безопасное размещение электрооборудования благодаря нашим опытным
-                                        электромонтажным инженерам. Доверьте замеры профессионалам и убедитесь в
-                                        качестве наших услуг!</p>
-                                </div>
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Установка розетки - <span>от 200р/шт</span></h2>
-                                    <p class="text-block__p">Подключаем удобство к вашим потребностям! Надежная
-                                        установка розеток от профессиональных электромонтажников. Создаем функциональные
-                                        точки электропитания с аккуратностью и вниманием к деталям. Воплотим в жизнь
-                                        ваши планы по размещению электрооборудования. Доверьте нам заботу о вашем
-                                        электрическом комфорте!</p>
-                                </div>
-                                <img class="pricelist__item" src="./img/works/2.png" alt="work2">
-                                <img class="pricelist__item" src="./img/works/3.png" alt="work3">
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Монтаж выключателя - <span>от 220р/шт</span></h2>
-                                    <p class="text-block__p">Переключите удобство на новый уровень! Профессиональный
-                                        монтаж выключателей для обеспечения безопасности и комфорта. Наши опытные
-                                        электромонтажники создадут идеальные электрические точки управления с учетом
-                                        ваших потребностей. Доверьте нам заботу о правильном функционировании вашей
-                                        электросети – ваш контроль всегда под рукой!</p>
-                                </div>
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Перенос выключателя или розетки - <span>от 200р/шт</span>
-                                    </h2>
-                                    <p class="text-block__p">Делаем вашу электропроводку удобной! Профессиональный
-                                        перенос выключателей и розеток для оптимизации расположения электроустройств.
-                                        Наши специалисты точно переместят электрические точки по вашему желанию,
-                                        обеспечивая идеальную функциональность и эстетику. Ваша электросеть – по вашему
-                                        сценарию!</p>
-                                </div>
-                                <img class="pricelist__item" src="./img/works/4.png" alt="work4">
-                                <img class="pricelist__item" src="./img/works/5.png" alt="work5">
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Монтаж розетки под электроплиту - <span>от 390р/шт</span>
-                                    </h2>
-                                    <p class="text-block__p">Безупречная поддержка для вашей электроплиты!
-                                        Профессиональный монтаж розетки специально под электроплиту, обеспечивающий
-                                        надежное и безопасное питание. Наши эксперты заботятся о корректном подключении
-                                        и эффективной работе плиты, создавая удобное и функциональное пространство для
-                                        приготовления пищи. Полный контроль над готовкой благодаря нашему опыту!</p>
-                                </div>
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Установка люстры - <span>от 400р/шт</span></h2>
-                                    <p class="text-block__p">Воплощаем световые идеи в реальность! Профессиональная
-                                        установка люстры, которая подчеркнет стиль вашего интерьера. Наши опытные
-                                        электромонтажники обеспечат безопасное и эстетичное подключение, создавая
-                                        атмосферу света и уюта в вашем пространстве. Поверьте световому дизайну
-                                        профессионалов!</p>
-                                </div>
-                                <img class="pricelist__item" src="./img/works/6.png" alt="work6">
-                                <img class="pricelist__item" src="./img/works/7.png" alt="work7">
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Установка точечного светильника - <span>от 190р/шт</span>
-                                    </h2>
-                                    <p class="text-block__p">Сосредотачивайтесь на деталях! Мастерская установка
-                                        точечных светильников для выделения особых элементов в интерьере. Наши
-                                        специалисты создадут точные и эффективные источники света, подчеркивающие стиль
-                                        и функциональность вашего пространства. Ваш дизайн оживает с нашими световыми
-                                        акцентами!</p>
-                                </div>
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Устранение обрыва, короткого замыкания - <span>от
-                                            490р/шт</span></h2>
-                                    <p class="text-block__p">Восстанавливаем электрическую гармонию! Профессиональное
-                                        устранение обрывов и коротких замыканий от опытных электромонтажников. Наши
-                                        эксперты быстро выявят и надежно устранят неисправности, обеспечивая
-                                        безопасность и нормальную работу вашей электросети. Доверьте нам заботу о
-                                        стабильности в ваших электрических потоках!</p>
-                                </div>
-                                <img class="pricelist__item" src="./img/works/8.png" alt="work8">
-                                <img class="pricelist__item" src="./img/works/9.png" alt="work9">
-                                <div class="text-block pricelist__item">
-                                    <h2 class="text-block__h">Установка электросчетчика - <span>от 400р/шт</span></h2>
-                                    <p class="text-block__p">Контроль в ваших руках! Профессиональная установка
-                                        электросчетчика для точного учета энергопотребления. Наши специалисты обеспечат
-                                        надежное подключение счетчика, давая вам полный контроль над электроэнергией. С
-                                        легкостью следите за расходами и вносите вклад в эффективное энергопотребление с
-                                        нашей помощью!</p>
-                                </div>
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Выезд на замер - <span>Бесплатно</span></h2>
+                                <p class="text-block__p">Профессиональные замеры – первый шаг к безупречному
+                                    электромонтажу! Наши эксперты предоставляют точные и детальные замеры помещений
+                                    для планирования и осуществления электромонтажных работ. Обеспечьте эффективное
+                                    и безопасное размещение электрооборудования благодаря нашим опытным
+                                    электромонтажным инженерам. Доверьте замеры профессионалам и убедитесь в
+                                    качестве наших услуг!</p>
+                            </div>
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Установка розетки - <span>от 200р/шт</span></h2>
+                                <p class="text-block__p">Подключаем удобство к вашим потребностям! Надежная
+                                    установка розеток от профессиональных электромонтажников. Создаем функциональные
+                                    точки электропитания с аккуратностью и вниманием к деталям. Воплотим в жизнь
+                                    ваши планы по размещению электрооборудования. Доверьте нам заботу о вашем
+                                    электрическом комфорте!</p>
+                            </div>
+                            <img class="pricelist__item" src="./img/works/2.png" alt="work2">
+                            <img class="pricelist__item" src="./img/works/3.png" alt="work3">
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Монтаж выключателя - <span>от 220р/шт</span></h2>
+                                <p class="text-block__p">Переключите удобство на новый уровень! Профессиональный
+                                    монтаж выключателей для обеспечения безопасности и комфорта. Наши опытные
+                                    электромонтажники создадут идеальные электрические точки управления с учетом
+                                    ваших потребностей. Доверьте нам заботу о правильном функционировании вашей
+                                    электросети – ваш контроль всегда под рукой!</p>
+                            </div>
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Перенос выключателя или розетки - <span>от 200р/шт</span>
+                                </h2>
+                                <p class="text-block__p">Делаем вашу электропроводку удобной! Профессиональный
+                                    перенос выключателей и розеток для оптимизации расположения электроустройств.
+                                    Наши специалисты точно переместят электрические точки по вашему желанию,
+                                    обеспечивая идеальную функциональность и эстетику. Ваша электросеть – по вашему
+                                    сценарию!</p>
+                            </div>
+                            <img class="pricelist__item" src="./img/works/4.png" alt="work4">
+                            <img class="pricelist__item" src="./img/works/5.png" alt="work5">
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Монтаж розетки под электроплиту - <span>от 390р/шт</span>
+                                </h2>
+                                <p class="text-block__p">Безупречная поддержка для вашей электроплиты!
+                                    Профессиональный монтаж розетки специально под электроплиту, обеспечивающий
+                                    надежное и безопасное питание. Наши эксперты заботятся о корректном подключении
+                                    и эффективной работе плиты, создавая удобное и функциональное пространство для
+                                    приготовления пищи. Полный контроль над готовкой благодаря нашему опыту!</p>
+                            </div>
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Установка люстры - <span>от 400р/шт</span></h2>
+                                <p class="text-block__p">Воплощаем световые идеи в реальность! Профессиональная
+                                    установка люстры, которая подчеркнет стиль вашего интерьера. Наши опытные
+                                    электромонтажники обеспечат безопасное и эстетичное подключение, создавая
+                                    атмосферу света и уюта в вашем пространстве. Поверьте световому дизайну
+                                    профессионалов!</p>
+                            </div>
+                            <img class="pricelist__item" src="./img/works/6.png" alt="work6">
+                            <img class="pricelist__item" src="./img/works/7.png" alt="work7">
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Установка точечного светильника - <span>от 190р/шт</span>
+                                </h2>
+                                <p class="text-block__p">Сосредотачивайтесь на деталях! Мастерская установка
+                                    точечных светильников для выделения особых элементов в интерьере. Наши
+                                    специалисты создадут точные и эффективные источники света, подчеркивающие стиль
+                                    и функциональность вашего пространства. Ваш дизайн оживает с нашими световыми
+                                    акцентами!</p>
+                            </div>
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Устранение обрыва, короткого замыкания - <span>от
+                                        490р/шт</span></h2>
+                                <p class="text-block__p">Восстанавливаем электрическую гармонию! Профессиональное
+                                    устранение обрывов и коротких замыканий от опытных электромонтажников. Наши
+                                    эксперты быстро выявят и надежно устранят неисправности, обеспечивая
+                                    безопасность и нормальную работу вашей электросети. Доверьте нам заботу о
+                                    стабильности в ваших электрических потоках!</p>
+                            </div>
+                            <img class="pricelist__item" src="./img/works/8.png" alt="work8">
+                            <img class="pricelist__item" src="./img/works/9.png" alt="work9">
+                            <div class="text-block pricelist__item">
+                                <h2 class="text-block__h">Установка электросчетчика - <span>от 400р/шт</span></h2>
+                                <p class="text-block__p">Контроль в ваших руках! Профессиональная установка
+                                    электросчетчика для точного учета энергопотребления. Наши специалисты обеспечат
+                                    надежное подключение счетчика, давая вам полный контроль над электроэнергией. С
+                                    легкостью следите за расходами и вносите вклад в эффективное энергопотребление с
+                                    нашей помощью!</p>
+                            </div>
 
 
                         </div>
                     </div>
                 </section>
                 <section class="feedback">
-                    <h2 class="feedback-h">Оставьте заявку на <span class="feedback-h__accent">бесплатную</span>
-                        консультацию. Перезвоним в течение 5 минут!</h2>
-                    <form class="feedback-form" action="POST" method="">
-                        <input class="feedback-form__input" name="name" type="text" placeholder="Ваше имя">
-                        <input type="tel" name="phone" placeholder="Ваш телефон">
-                        <textarea name="Message" placeholder="Ваш вопрос"></textarea>
-                        <button>Отправить</button>
-                    </form>
+                    <div class="feedback-container">
+                        <h2 class="feedback-h">Оставьте заявку на <span class="feedback-h__accent">бесплатную</span>
+                            консультацию. Перезвоним в течение 5 минут!</h2>
+                        <form class="feedback-form" action="POST" method="">
+                            <input class="feedback-form__input" name="name" type="text" placeholder="Ваше имя">
+                            <input type="tel" name="phone" placeholder="Ваш телефон">
+                            <textarea name="Message" placeholder="Ваш вопрос"></textarea>
+                            <button>Отправить</button>
+                        </form>
+                    </div>
                 </section>
                 <section class="faq">
                     <h2 class="faq-h">Как мы работаем</h2>
